# GTPfromScratch

./: LICENSE  README.md  pyproject.toml  train.py
config/: config.yaml
