[tool.poetry]
name = "shakespeare-gpt-from-scratch"
version = "0.1.0"
description = "A Generative AI Framework that trains a model to produce Shakespearean text."
authors = ["PSRahul <psrahul.ml@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
