[project]
name = "shakespeare-gpt-from-scratch"
version = "0.1.0"
description = "A Generative AI Framework that trains a model to produce Shakespearean text."
authors = ["PSRahul <psrahul.ml@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "omegaconf>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
